--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,18 @@
-/* Add CSS Styling */
+.odd-number {
+    background-color: rgb(253, 149, 145);
+    font-family: 'Verdana', 'DejaVu Sans', 'sans-serif';
+}
+
+#second-element {
+    color: blue;
+    font-size: 36px;
+}
+
+#third-element {
+    font-size: 24px;
+}
+
+#fourth-element {
+    background-color: rgb(129, 255, 129);
+    font-size: 24px;
+}
