Completed 03-grouping-selectors
Finished working on 03-grouping-selectors.
Could of made it neater after reading the solution

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,16 @@
-/* Add CSS Styling */
+#first {
+    background-color: #000000;
+    color: white;
+}
+
+#second {
+    background-color: #FFF000;
+}
+
+.apply-font-size {
+    font-size: 28px;
+}
+
+.apply-font-family {
+    font-family: 'Helvetica', 'Times New Roman', 'sans-serif';
+}
