--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2px 6px;
 }
 
 .profile-image {
@@ -20,6 +24,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  align-self: center;
+  margin-left: 15px;
 }
 
 .logo {
@@ -45,4 +51,9 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 20px;
+  flex: 1;
+  margin-left: 10px;
+  padding: 6px;
 }
