--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,17 +10,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
-/* do not edit this footer */
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 52px;
+.container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background: #eee;
+  flex-wrap: wrap;
+}
+
+.container__plant-type-container {
+  display: flex;
+  gap: 52px;
+}
+
+.container__plant-type-container .card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 200px;
 }
